testsuite/poke.pkl/cast-diag-7.pk
/* { dg-do compile } */

defun foo = string:
  {
   return "foo" as int[4#B][4#B]; /* { dg-error "" } */
  }
